--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,14 @@
 .App {
-  text-align: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 1rem 5rem;
+  width: max-content;
+}
+
+.App > * {
+  align-self: center;
 }
 
 .App-logo {
