--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   grid-template-rows: auto auto;
   justify-content: space-around;
   background: linear-gradient(to right, #ff7e5f, #feb47b);
-  height: 100vh;
+  height: full;
 }
 
 .App > div {
@@ -61,4 +61,19 @@
   cursor: pointer;
   background-color: black;
   color: white;
+}
+
+.userDetails {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.displayresults {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.displayResultsItem {
+  display: flex;
+  flex-direction: column;
 }
