--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   grid-template-rows: auto auto;
   justify-content: space-around;
   background: linear-gradient(to right, #ff7e5f, #feb47b);
-  height: full;
+  height: 100vh;
 }
 
 .App > div {
